--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "app-supabase",
   "version": "1.0.0",
   "main": "index.js",
+  "engine": {"node": "18"},
   "scripts": {
-    "dev": "tsx  src/server.ts"
+    "dev": "tsx  src/server.ts",
+    "start":"node sidt/servet.ts",
+    "build": "tsup src"
   },
   "keywords": [],
   "author": "",
