fix: correct build and script configurations in package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "app-supabase",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "engine": {
     "node": "18"
   },
   "scripts": {
-    "dev": "tsx  src/server.ts",
-    "start": "node sidt/servet.ts",
+    "dev": "tsx src/server.ts",
+    "start": "node dist/server.js",
     "build": "tsup src"
   },
   "keywords": [],
@@ -23,6 +23,6 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "tsup": "^8.2.4"
+    "tsup": "^5.12.9"
   }
 }
