--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@types/node": "^22.4.1",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
-    "tsx": "^4.17.0",
-    "typescript": "^5.5.4"
+    "tsx": "^4.17.0"
   },
   "devDependencies": {
-    "tsup": "^5.12.9"
+    "tsup": "^5.12.9",
+    "typescript": "^4.9.5"
   }
 }
